# mdye-python-samples

./: .envrc-SAMPLE  .gitignore  Makefile  README.md  pyproject.toml  ruff.toml
.github/workflows/: python-app.yaml
doc/: environment_setup.md
src/common/: new_solution.py  timing.py
src/mdye_euler/: solution_1_list_comp.py  solution_2_fib_evens.py  solution_3_largest_prime_factor.py
src/mdye_euler/test/: test_solution1.py  test_solution_1.py  test_solution_2.py  test_solution_3.py
src/mdye_hackerrank/: no_idea.py  plus_minus.py  py_set_add.py  py_set_discard_remove_pop.py  solution_caeser_cipher.py  solution_counting_sort.py  solution_diagonal_difference.py  solution_grid_challenge.py  solution_lonely_integer.py  solution_matrix_flip.py  solution_merged_sorted_linked_lists.py  solution_min_max_sum.py  solution_new_year_chaos.py  solution_palindrome_index.py  solution_time_conversion.py  solution_tower_breakers.py  solution_truck_tour.py  solution_zigzag_sequence.py  testing_support.py
src/mdye_hackerrank/test/: test_caeser_cipher.py  test_counting_sort.py  test_diagonal_difference.py  test_grid_challenge.py  test_lonely_integer.py  test_matrix_flip.py  test_merged_sorted_linked_lists.py  test_min_max_sum.py  test_new_year_chaos.py  test_no_idea.py  test_palindrome_index.py  test_plus_minus.py  test_py_set_add.py  test_py_set_discard_remove_pop.py  test_time_conversion.py  test_tower_breakers.py  test_truck_tour.py  test_zigzag_sequence.py
src/mdye_leetcode/: solution_1060.py  solution_110.py  solution_1232.py  solution_1281.py  solution_1367.py  solution_1491.py  solution_150.py  solution_1502.py  solution_1523.py  solution_1779.py  solution_1790.py  solution_1822.py  solution_191.py  solution_202.py  solution_28.py  solution_300.py  solution_300_longest_increasing_subsequence.py  solution_459.py  solution_496.py  solution_5.py  solution_589.py  solution_66.py  solution_67.py  solution_823.py  solution_896.py  solution_976.py
src/mdye_leetcode/test/: test_solution_1060.py  test_solution_110.py  test_solution_1232.py  test_solution_1281.py  test_solution_1367.py  test_solution_1491.py  test_solution_150.py  test_solution_1502.py  test_solution_1523.py  test_solution_1779.py  test_solution_1790.py  test_solution_1822.py  test_solution_191.py  test_solution_202.py  test_solution_28.py  test_solution_300.py  test_solution_459.py  test_solution_496.py  test_solution_5.py  test_solution_589.py  test_solution_66.py  test_solution_67.py  test_solution_823.py  test_solution_896.py  test_solution_976.py
src/mdye_misc/: binary_search.py  fib_various.py  flexy_binary_search.py  hash_table.py  heaps.py  linked_list.py  long_array_list.py  pair_can_sum.py  sliding_window.py
src/mdye_misc/test/: __init__.py  test_binary_search.py  test_linked_list.py  test_pair_can_sum.py  test_sliding_window.py
