[tool.poetry]
name="mdye-python-samples"
version="0.1.0"
description="Varying modern Python code samples, packaged."
authors=[ "michael dye <m-github@divisive.info>"]
packages=[
    { include="common", from="src" },
    { include="mdye_misc", from="src" },
    { include="mdye_leetcode", from="src" },
    { include="mdye_euler", from="src" }
  ]

[tool.poetry.dev-dependencies]
pylint = "*"
pytest = "*"
ruff = "*"

[tool.poetry.dependencies]
python = ">=3.9.0,<4"

[tool.poetry.scripts]
new-solution = "common.new_solution:main"

[build-system]
requires = ["poetry-core >= 1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
python_files = "*test_*.py"
markers = [
  "integration: marks tests with external service dependencies (deselect with \"-m 'not integration'\")"
]
log_cli = true
log_cli_level = "DEBUG"